color palette draft

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --dark-green: #353535;
+  --green: #3c6e71;
+  --white: #ffffff;
+  --soft-grey: #d9d9d9;
+  --blue-navy: #284b63;
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+}
