--- a/src/styles.css
+++ b/src/styles.css
@@ -10,8 +10,16 @@
 html,
 body {
   height: 100%;
+  background-color: var(--dark-green);
   margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  max-width: 100%;
   font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
+}
+
+* {
+  box-sizing: border-box;
 }
