--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -14,7 +14,7 @@
       >
       <a
         (click)="scrollTo('certifications')"
-        [class.active]="activeSection === 'experience'"
+        [class.active]="activeSection === 'certifications'"
         >STUDIES AND CERTIFICATIONS</a
       >
       <a
