🩹 personal project label localization

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -703,7 +703,13 @@
           </div>
         </div>
       </a>
-      <h5>Personal Projects: where I repeatedly lost my sense of time</h5>
+      <h5>
+        {{
+          language === "it"
+            ? "Progetti Personali: dove ho più volte perso il senso del tempo"
+            : "Personal Projects: where I repeatedly lost my sense of time"
+        }}
+      </h5>
       <a
         class="project-entry"
         href="https://github.com/grotondococco/egames"
