--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -370,12 +370,12 @@
       </a>
       <div class="resume-link-container">
         @if(language == 'it') {
-        <a href="path/to/CV_Giacomo_Rotondo.pdf" download class="resume-link">
+        <a href="CV_Giacomo_Rotondo.pdf" download class="resume-link">
           Visualizza il curriculum completo <span class="arrow">→</span>
         </a>
         } @else {
         <a
-          href="path/to/CV_Giacomo_Rotondo_EN.pdf"
+          href="CV_Giacomo_Rotondo_EN.pdf"
           download
           class="resume-link"
         >
