--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -261,7 +261,7 @@
       </h4>
       <a class="experience-entry">
         <div class="experience-duration">
-          2024 - @if(language == 'it'){ OGGI } @else { PRESENT}
+          2024 - @if(language == 'it'){ PRESENTE } @else { PRESENT}
         </div>
         <div class="experience-content">
           <div class="experience-role">
